--- a/new.html
+++ b/new.html
@@ -1,22 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello, World! - A-Frame</title>
-    <meta name="description" content="Hello, World! - A-Frame">
-    <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-  </head>
-  <body>
-    <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
-    </a-scene>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -32,8 +13,6 @@
         <a-asset-item id="engine" src="assets/models/engine.glb"></a-asset-item>
         <a-mixin id="image" geometry="height: 2; width: 2"></a-mixin>
         <a-mixin id="delayVisible" event-set__loaded="visible: true" visible="false"></a-mixin>
-        <!-- <audio id="blip1" src="audio/321103__nsstudios__blip1.wav"></audio> -->
-        <!-- <audio id="blip2" src="audio/321104__nsstudios__blip2.wav"></audio> -->
         <img id="glow1" src="assets/img/glow1.png">
         <img id="greenGlow" src="assets/img/greenGlow.png">
         <img id="largeRing" src="assets/img/largeRing.png">
@@ -48,11 +27,15 @@
       </a-assets>
 
       <a-entity position="1.75 0 1.2" rotation="0 28 0">
-        <a-camera position="0 0 0" near="0.1"></a-camera>
+        <!-- <a-camera position="0 0 0" near="0.1"></a-camera> -->
       </a-entity>
 
       <a-entity position="0 0 -3">
-        <a-gltf-model src="#engine" rotation="90 0 0" scale="18 18 18"></a-gltf-model>
+        <!-- <a-gltf-model src="#engine" rotation="90 0 0" scale="18 18 18"></a-gltf-model> -->
+        <a-cylinder position="0 0 0" rotation="90 0 0" radius="10" height="30" open-ended="true" fog="true" color="#7BC8A4"></a-cylinder>
+        <!-- <a-plane position="0 0 -14" rotation="0 0 0" width="25" height="25" color="#7BC8A4"></a-plane> -->
+        <!-- <a-plane position="-5 0 0" rotation="0 90 0" width="25" height="5" color="#7BC8A4"></a-plane> -->
+
       </a-entity>
 
       <a-entity id="terminal" position="0 0 -14" scale="1 1 1">
@@ -74,43 +57,11 @@
         <a-image mixin="image delayVisible" src="#directionRing" scale="0.5 0.5 0.5" position="0 0 .03" event-set__loaded="_delay: 800"></a-image>
       </a-entity>
 
-      <!-- <a-entity id="ring-group-4" position="0 0 -6" scale="0.7 0.7 0.7">
-        <a-image mixin="image delayVisible" src="#glow1" scale="5 5 5" position="0 0 -2" event-set__loaded="_delay: 1500"></a-image>
-        <a-image mixin="image delayVisible" src="#largeRing" scale="1.2 1.2 1.2" position="0 0 0" event-set__loaded="_delay: 800"></a-image>
-        <a-image mixin="image delayVisible" src="#mediumRing" scale="1 1 1" position="0 0 .01" event-set__loaded="_delay: 800"></a-image>
-        <a-image mixin="image delayVisible" src="#mediumRing" scale="0.7 0.7 0.7" position="0 0 .02" event-set__loaded="_delay: 800"></a-image>
-        <a-image mixin="image delayVisible" src="#directionRing" scale="0.5 0.5 0.5" position="0 0 .03" event-set__loaded="_delay: 800"></a-image>
-      </a-entity>
-
-      <a-entity id="rings-group-3" position="0 0 -2" scale="0.5 0.5 0.5">
-        <a-image mixin="image delayVisible" src="#mediumRing" scale=".8 .8 .8" event-set__loaded="_delay: 1000"></a-image>
-        <a-image mixin="image delayVisible" src="#targetRing" scale=".5 .5 .5" position="0 0 .01" event-set__loaded="_delay: 1100"></a-image>
-        <a-image mixin="image delayVisible" src="#mediumRing" position="0 0 .02" event-set__loaded="_delay: 1100"
-                 animation__scale="property: scale; from: 1 1 1; to: 1.2 1.2 1.2; delay: 1100; dur: 250; easing: easeOutCubic"></a-image>
-      </a-entity>
-
-      <a-entity id="rings-group-2" position="0 0 -1" scale="0.5 0.5 0.5">
-        <a-image mixin="image delayVisible" src="#largeRing" scale="1.2 1.2 1.2" position="0 0 0" event-set__loaded="_delay: 800"></a-image>
-        <a-image mixin="image delayVisible" src="#mediumRing" scale="1 1 1" position="0 0 .01" event-set__loaded="_delay: 800"></a-image>
-        <a-image mixin="image delayVisible" src="#mediumRing" scale="0.7 0.7 0.7" position="0 0 .02" event-set__loaded="_delay: 800"></a-image>
-        <a-image mixin="image delayVisible" src="#directionRing" scale="0.5 0.5 0.5" position="0 0 .03" event-set__loaded="_delay: 800"></a-image>
-      </a-entity>
-
-      <a-entity id="rings-group-1" scale="0.6 0.6 0.6">
-        <a-image mixin="delayVisible" mixin="image" src="#targetRing" scale="0.75 0.75 0.75" position="0 0 0" event-set__loaded="_delay: 600"></a-image>
-        <a-image mixin="delayVisible" mixin="image" src="#directionRing" scale="1.1 1.1 1.1" position="0 0 .01" event-set__loaded="_delay: 600"></a-image>
-        <a-image mixin="delayVisible" mixin="image" src="#largeRing" position="0 0 .02" event-set__loaded="_delay: 700"
-                 animation__scale="property: scale; from: 1 1 1; to: 1.25 1.25 1.25; delay: 700; dur: 250; easing: easeOutCubic"></a-image>
-      </a-entity> -->
-
       <!-- Lights. -->
       <a-light type="point" color="#ff007f" distance="15" position="0 0 -12" intensity="0" animation="property: light.intensity; from: 0; to: 2; delay: 750; dur: 500"></a-light>
       <a-light type="point" color="#ff007f" distance="17" position="0 0 -6" intensity="0" animation="property: light.intensity; from: 0; to: 1; delay: 500; dur: 500"></a-light>
       <a-light type="ambient" color="#ff007f" ></a-light>
 
-      <!-- Sounds. -->
-      <a-entity sound="autoplay: true; src: #blip1"></a-entity>
-      <a-entity sound="autoplay: true; src: #blip2"></a-entity>
     </a-scene>
   </body>
 </html>
