--- a/original.html
+++ b/original.html
@@ -10,26 +10,26 @@
   <body>
     <a-scene renderer="colorManagement: true;">
       <a-assets>
-        <a-asset-item id="engine" src="models/engine.glb"></a-asset-item>
+        <a-asset-item id="engine" src="assets/models/engine.glb"></a-asset-item>
         <a-mixin id="image" geometry="height: 2; width: 2"></a-mixin>
         <a-mixin id="delayVisible" event-set__loaded="visible: true" visible="false"></a-mixin>
         <!-- <audio id="blip1" src="audio/321103__nsstudios__blip1.wav"></audio> -->
         <!-- <audio id="blip2" src="audio/321104__nsstudios__blip2.wav"></audio> -->
-        <img id="glow1" src="img/glow1.png">
-        <img id="ring1" src="img/ring1.png">
-        <img id="ring2" src="img/ring2.png">
-        <img id="ring3" src="img/ring3.png">
-        <img id="ring4" src="img/ring4.png">
-        <img id="ring5" src="img/ring5.png">
-        <img id="schematic1" src="img/schematic1.png">
-        <img id="schematic2" src="img/schematic2.png">
-        <img id="schematic3" src="img/schematic3.png">
-        <img id="schematic4" src="img/schematic4.png">
-        <img id="schematic5" src="img/schematic5.png">
-        <img id="text1" src="img/text1.png">
-        <img id="text2" src="img/text2.png">
-        <img id="text3" src="img/text3.png">
-        <img id="text4" src="img/text4.png">
+        <img id="glow1" src="assets/img/glow1.png">
+        <img id="ring1" src="assets/img/ring1.png">
+        <img id="ring2" src="assets/img/ring2.png">
+        <img id="ring3" src="assets/img/ring3.png">
+        <img id="ring4" src="assets/img/ring4.png">
+        <img id="ring5" src="assets/img/ring5.png">
+        <img id="schematic1" src="assets/img/schematic1.png">
+        <img id="schematic2" src="assets/img/schematic2.png">
+        <img id="schematic3" src="assets/img/schematic3.png">
+        <img id="schematic4" src="assets/img/schematic4.png">
+        <img id="schematic5" src="assets/img/schematic5.png">
+        <img id="text1" src="assets/img/text1.png">
+        <img id="text2" src="assets/img/text2.png">
+        <img id="text3" src="assets/img/text3.png">
+        <img id="text4" src="assets/img/text4.png">
       </a-assets>
 
       <a-entity position="1.75 0 1.2" rotation="0 28 0">
